Refactor API structure and add property scrapers
- Refactored API into modular structure with separate models, routes, utils, and scrapers service
- Added scrapers for Idealista, Immobiliare, and James Edition platforms
- Removed legacy standalone files (app.py, cli_match.py)
- Removed old web templates and static files
- Updated matching engine and configuration
- Updated Dockerfile and requirements.txt
- Added .gitignore to exclude cache files and environment variables
- Cleaned up Python cache files from repository

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
 fastapi
 uvicorn
+requests
+pandas
+python-multipart
+jinja2
+aiofiles
 pydantic
 numpy
 faiss-cpu # or faiss-gpu if you have a GPU
 sentence-transformers
 Pillow
-requests
-beautifulsoup4 # New for web scraping
+beautifulsoup4 
 tqdm
 Flask
 Flask-CORS
 reportlab # For PDF export
-pandas # For CSV export
-jinja2
-python-multipart
 playwright
 playwright-stealth
 motor
