--- a/railway.toml
+++ b/railway.toml
@@ -1,2 +1,9 @@
 [build]
 builder = "dockerfile"
+buildCommand = ""
+dockerfilePath = "Dockerfile"
+
+[deploy]
+startCommand = "uvicorn api.main:app --host 0.0.0.0 --port $PORT"
+restartPolicyType = "on_failure"
+restartPolicyMaxRetries = 10
